draft: initial commit for crush rule
