# api/openapi/ceph-api.swagger.json
@@ -20,6 +20,9 @@
       "name": "Cluster"
     },
     {
+      "name": "CrushRule"
+    },
+    {
       "name": "Host"
     },
     {
@@ -342,6 +345,122 @@
         ]
       }
     },
+    "/api/crush_rule": {
+      "get": {
+        "operationId": "CrushRule_ListRules",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "$ref": "#/definitions/cephRule"
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "CrushRule"
+        ]
+      },
+      "post": {
+        "operationId": "CrushRule_CreateRule",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/cephCreateRuleRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CrushRule"
+        ]
+      }
+    },
+    "/api/crush_rule/{name}": {
+      "get": {
+        "operationId": "CrushRule_GetRule",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/cephRule"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "CrushRule"
+        ]
+      },
+      "delete": {
+        "operationId": "CrushRule_DeleteRule",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "CrushRule"
+        ]
+      }
+    },
     "/api/host/{name}": {
       "get": {
         "operationId": "Host_GetHost",
@@ -516,21 +635,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "description": {
-                  "type": "string"
-                },
-                "scopes_permissions": {
-                  "type": "object",
-                  "additionalProperties": {
-                    "type": "array",
-                    "items": {
-                      "type": "object"
-                    }
-                  }
-                }
-              }
+              "$ref": "#/definitions/UsersUpdateRoleBody"
             }
           }
         ],
@@ -720,34 +825,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "type": "string"
-                },
-                "enabled": {
-                  "type": "boolean"
-                },
-                "name": {
-                  "type": "string"
-                },
-                "password": {
-                  "type": "string"
-                },
-                "pwdExpirationDate": {
-                  "type": "string",
-                  "format": "date-time"
-                },
-                "pwdUpdateRequired": {
-                  "type": "boolean"
-                },
-                "roles": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              }
+              "$ref": "#/definitions/cephUsersUpdateUserBody"
             }
           }
         ],
@@ -786,15 +864,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "old_password": {
-                  "type": "string"
-                },
-                "new_password": {
-                  "type": "string"
-                }
-              }
+              "$ref": "#/definitions/UsersUserChangePasswordBody"
             }
           }
         ],
@@ -805,6 +875,34 @@
     }
   },
   "definitions": {
+    "UsersUpdateRoleBody": {
+      "type": "object",
+      "properties": {
+        "description": {
+          "type": "string"
+        },
+        "scopes_permissions": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "array",
+            "items": {
+              "type": "object"
+            }
+          }
+        }
+      }
+    },
+    "UsersUserChangePasswordBody": {
+      "type": "object",
+      "properties": {
+        "old_password": {
+          "type": "string"
+        },
+        "new_password": {
+          "type": "string"
+        }
+      }
+    },
     "cephClusterStatus": {
       "type": "object",
       "properties": {
@@ -874,6 +972,30 @@
         }
       }
     },
+    "cephCreateRuleRequest": {
+      "type": "object",
+      "properties": {
+        "deviceClass": {
+          "type": "string"
+        },
+        "failureDomain": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "poolType": {
+          "type": "string"
+        },
+        "profile": {
+          "type": "string"
+        },
+        "root": {
+          "type": "string"
+        }
+      },
+      "title": "CREATE RULE"
+    },
     "cephCreateUserReq": {
       "type": "object",
       "properties": {
@@ -928,6 +1050,14 @@
         }
       }
     },
+    "cephGetRuleResponse": {
+      "type": "object",
+      "properties": {
+        "rule": {
+          "$ref": "#/definitions/cephRule"
+        }
+      }
+    },
     "cephHostResp": {
       "type": "object",
       "properties": {
@@ -938,6 +1068,19 @@
           "type": "string"
         }
       }
+    },
+    "cephListRulesResponse": {
+      "type": "object",
+      "properties": {
+        "rules": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/cephRule"
+          }
+        }
+      },
+      "title": "LIST RULES"
     },
     "cephLoginReq": {
       "type": "object",
@@ -1008,6 +1151,52 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/cephRole"
+          }
+        }
+      }
+    },
+    "cephRule": {
+      "type": "object",
+      "properties": {
+        "ruleId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "ruleName": {
+          "type": "string"
+        },
+        "ruleset": {
+          "type": "string",
+          "format": "int64"
+        },
+        "type": {
+          "type": "string",
+          "format": "int64"
+        },
+        "minSize": {
+          "type": "string",
+          "format": "int64"
+        },
+        "maxSize": {
+          "type": "string",
+          "format": "int64"
+        },
+        "steps": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/cephStep"
+          }
+        }
+      }
+    },
+    "cephStep": {
+      "type": "object",
+      "properties": {
+        "entries": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
           }
         }
       }
@@ -1109,6 +1298,36 @@
         }
       }
     },
+    "cephUsersUpdateUserBody": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "enabled": {
+          "type": "boolean"
+        },
+        "name": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "pwdExpirationDate": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "pwdUpdateRequired": {
+          "type": "boolean"
+        },
+        "roles": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "googlerpcStatus": {
       "type": "object",
       "properties": {
@@ -1143,7 +1362,7 @@
         "NULL_VALUE"
       ],
       "default": "NULL_VALUE",
-      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
+      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\nThe JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
     }
   },
   "securityDefinitions": {
